Instagram embed function is  manually called to ensure they load. Moved photo rendering back into App to prevent incorrect navbar z-index. Minor style change.

--- a/src/styles/_Product.scss
+++ b/src/styles/_Product.scss
@@ -29,6 +29,7 @@
     top: 18vh;
     left: 10vw;
     background-color: $bg-color;
+    border: 1px solid #b0b0b0;
     animation-name: expandProduct;
     animation-duration: .15s;
     animation-timing-function: ease-in-out;
